--- a/templates/error.html
+++ b/templates/error.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %} ERROR {% endblock %}
 
-{% block content %}
+{% block content %}is sorry.
 <div id="error">
   {{ message }}
 </div>
