--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,6 +21,14 @@
       {% block footer %}
 
       {% endblock footer %}
+      <div id="license">
+	<span>Content licensed under a</span>
+	<a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Attribution-NonCommercial-ShareAlike 3.0 Unported</a>
+      </div>
+      <div id="about">
+	<span>Powered by</span>
+	<a href="">pgpy</a>
+      </div>
     </div>
   </body>
 </html>
